@@ -3,10 +3,11 @@ Version 1.3.14+svn:
    * updated translations: Chinese, Danish, Dutch, French, Italian, Lithuanian,
      Spanish
  * miscellaneous and bug fixes:
-   * Special notes should be more readable now (patch #941)
+   * Unit special notes should be more readable now (patch #941)
    * Fixed :control command to work
    * Fixed boost test compile with 1.34.1
-   * make wesnoth work properly again if the datadir contains ../
+   * Make wesnoth work properly again if the datadir contains ../
+   * Fixed some type of addon not being uninstallable (bug #10788)
 
 Version 1.3.14:
  * campaigns:
